Removed socket.io clientside, fixed whitespace issues on mobile due to Skeleton & Bootstrap class name collisions, made automattic logo larger, gundb smaller

--- a/public/assets/css/skeleton.css
+++ b/public/assets/css/skeleton.css
@@ -23,7 +23,7 @@
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.container {
+.container-sk {
   position: relative;
   width: 100%;
   max-width: 960px;
@@ -38,14 +38,14 @@
 
 /* For devices larger than 400px */
 @media (min-width: 400px) {
-  .container {
+  .container-sk {
     width: 85%;
     padding: 0; }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
-  .container {
+  .container-sk {
     width: 80%; }
   .column,
   .columns {
@@ -118,7 +118,7 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
-body {
+body-sk {
   font-size: 1.6em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
@@ -382,8 +382,8 @@ hr {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 /* Self Clearing Goodness */
-.container:after,
-.row:after,
+.container-sk:after,
+.row-sk:after,
 .u-cf {
   content: "";
   display: table;
